deploy-twinstagram-gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twinstagram-gui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twinstagram-gui
  template:
    metadata:
      labels:
        app: twinstagram-gui
    spec:
      type: NodePort
      externalIPs:
      - '172.16.1.3'
      nodeSelector:
        "role": worker
      containers:
      - name: twinstagram-gui
        image: dmitri1994/twinstagram-gui:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
