authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: message-service
        image: dmitri1994/twinstagram-authentication-service:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: authentication-service
