ocelot-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocelot-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ocelot-gateway
  template:
    metadata:
      labels:
        app: ocelot-gateway
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: ocelot-gateway
        image: dmitri1994/twinstagram-ocelot:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ocelot-gateway
