twinstagram-gui.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: twinstagram-gui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twinstagram-gui
  template:
    metadata:
      labels:
        app: twinstagram-gui
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: twinstagram-gui
        image: dmitri1994/twinstagram-gui:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: twinstagram-gui
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: twinstagram-gui
