ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twinstagram-gui
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: message-service
            port:
              number: 80
